--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -18,7 +18,7 @@
             <div class="about-div">
                 <P class="text"> We are a minimalistic flower studio. We love people and flowers. Therfore, every day we give people the beauty and joy creating stylish and modern masterpieces. Every bouquet we create is unique as you are.</P>
                 <img 
-                    src="./images/about.jpg"
+                    src=".images/about.jpg"
                     srcset="./images/about@2x.jpg 2x"
                     alt="pink flowers"
                     width="288"
