--- a/src/styles/partials/blog.css
+++ b/src/styles/partials/blog.css
@@ -148,24 +148,22 @@ body {
 
 
 /* Modal */
-.backdrop {
+.blog-backdrop {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop.is-hidden {
+.blog-backdrop.is-hidden {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
 }
 
-.modal {
+.blog-modal {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -175,10 +173,9 @@ body {
     min-height: 357px;
     background-color: #FFF;
     padding: 28px 16px 14px;
-
 }
 
-.close-btn {
+.blog-close-btn {
     padding: 0;
     position: absolute;
     top: 24px;
@@ -192,7 +189,6 @@ body {
     background-color: white;
 }
 
-
 .blog-modal-wrapper {
     display: flex;
     flex-direction: column;
@@ -201,8 +197,6 @@ body {
 .blog-modal-wrapper:first-child {
     margin-bottom: 14px;
 }
-
-
 
 .blog-modal-text {
     color: #5C5C5C;
@@ -228,10 +222,6 @@ body {
     font-size: 10px;
 }
 
-.modal-icon-wrapper {
-    position: relative;
-}
-
 .blog-modal-input {
     width: 100%;
     display: flex;
@@ -253,37 +243,17 @@ body {
     border-color: rgba(17, 17, 17, 0.70);
 }
 
-.blog-modal-input:not(:placeholder-shown):required:valid:focus-within {
+.blog-modal-input:not(:placeholder-shown):required:valid {
     border-color: #3CBC81;
-    
 }
 
 .blog-modal-input:not(:placeholder-shown):required:invalid {
     border-color: #E74A3B;
 }
-/* .blog-modal-input:placeholder-shown {
-    border-color: blue;
-} */
-/* .modal-input:focus {
-    border-color: var(--iris);
-}
 
-.modal-input:focus+.modal-icon {
-    fill: var(--iris);
-} */
-
-.modal-icon {
-    fill: var(--navy-blue);
-    position: absolute;
-    left: 16px;
-    top: 50%;
-    transform: translateY(-50%);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-button-submit {
+.blog-modal-button-submit {
     display: flex;
-    width: 240px;
+    min-width: 100%;
     height: 37px;
     padding: 10px 0px;
     justify-content: center;
@@ -293,8 +263,8 @@ body {
     background: rgba(232, 111, 84, 0.40);
     border: none;
     cursor: pointer;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-top: 24px;
+    color: #FFF;
 }
 
 /* -------Modal */
@@ -309,7 +279,6 @@ body {
     .blog-list {
         margin-bottom: 8px;
     }
-
 
     .blog-vector-container {
         margin-bottom: 18px;
@@ -337,9 +306,43 @@ body {
         gap: 32px;
         margin-bottom: 100px;
     }
+
+    /* Modal */
+    .blog-modal {
+        max-width: 480px;
+        min-height: 511px;
+        padding: 28px 16px 14px;
+    }
+    
+    .blog-modal-heading {
+        font-size: 32px;
+        padding-bottom: 24px;
+    }
+
+    .blog-modal-text-p {
+        font-size: 16px;
+        padding-bottom: 32px;
+    }
+
+    .blog-modal-label {
+        font-size: 14px;
+    }
+
+    .blog-modal-input {
+        height: 49px;
+        padding: 16px 0 16px 16px;
+        font-size: 14px;
+    }
+
+    .blog-modal-button-submit {
+        height: 50px;
+        padding: 14px 0px;
+        margin-top: 38px;
+    }
 }
 
 @media screen and (min-width: 1280px) {
+    
     .blog-picture-visually-hidden {
         display: flex;
     }
