--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,5 @@
+
+
 * {
     padding: 0;
     margin: 0;
@@ -10,3 +12,5 @@ ul, ol {
 body {
     font-family: "Montsterrat", sans-serif;
   }
+
+    @import url("../styles/partials/_blog.scss");
