--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,4 +11,4 @@ body {
     font-family: "Montsterrat", sans-serif;
   }
   
-  @import url(./partials/about.css);
+  @import url(./partials/about.scss);
