--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,5 +36,11 @@
             </div>
         </div>
     </div>
-
+    <p>
+    <code>src/partials</code>.
+    <code>index.html</code>.
+</p>
+<p>
+<code> &lt;include src="./partials/index.html"&gt;&lt;/include&gt; </code>
+</p>
 </header>
