--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,3 +15,4 @@ body {
 
   @import url(./partials/about.scss);
   @import url("../styles/partials/_blog.scss");
+  @import url(./partials/footer.scss);
