--- a/src/partials/blog.html
+++ b/src/partials/blog.html
@@ -1,184 +1,108 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-    />
-    <link rel="stylesheet" href="../styles/partials/blog.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header></header>
-    <main>
-      <section class="blog-container">
-        <div class="blog-section-title-container">
-          <h2 class="blog-section-title">BLOG</h2>
-          <div class="blog-line"></div>
-        </div>
+<section class="blog-container">
+  <div class="blog-section-title-container">
+    <h2 class="blog-section-title">BLOG</h2>
+    <div class="blog-line"></div>
+  </div>
 
-        <ul class="blog-list list">
-          <li class="blog-list-item">
-            <picture class="blog-list-item">
-              <source
-                media="(min-width: 1280px)"
-                srcset="
-                  ../images/Blog/flowers_image1desktop@1x.jpg 1x,
-                  ../images/Blog/flowers_image1desktop@2x.jpg 2x
-                "
-              />
-              <source
-                media="(min-width: 768px)"
-                srcset="
-                  ../images/Blog/flowers_image1tablet@1x.jpg  1x,
-                  ../images/Blog/flowers_image1tabletp@2x.jpg 2x
-                "
-              />
-              <source
-                media="(max-width: 767px)"
-                srcset="
-                  ../images/Blog/flowers_image1mobile@1x.jpg  1x,
-                  ../images/Blog/flowers_image1mobilep@2x.jpg 2x
-                "
-              />
-              <img class="" src="../images/Blog/flowers_image1mobile@1x.jpg" alt="green flower" />
-            </picture>
-          </li>
-          <li class="blog-list-item">
-            <picture>
-              <source
-                media="(min-width: 1280px)"
-                srcset="
-                  ../images/Blog/flowers_image2desktop@1x.jpg 1x,
-                  ../images/Blog/flowers_image2desktop@2x.jpg 2x
-                "
-              />
-              <source
-                media="(min-width: 768px)"
-                srcset="
-                  ../images/Blog/flowers_image2tablet@1x.jpg  1x,
-                  ../images/Blog/flowers_image2tabletp@2x.jpg 2x
-                "
-              />
-              <source
-                media="(max-width: 767px)"
-                srcset="
-                  ../images/Blog/flowers_image2mobile@1x.jpg  1x,
-                  ../images/Blog/flowers_image2mobilep@2x.jpg 2x
-                "
-              />
-              <img class="" src="../images/Blog/flowers_image2mobile@1x.jpg" alt="orange flower" />
-            </picture>
-          </li>
-          <li class="blog-picture-visually-hidden">
-            <picture>
-              <source
-                media="(min-width: 1280px)"
-                srcset="
-                  ../images/Blog/flowers_image3desktop@1x.jpg 1x,
-                  ../images/Blog/flowers_image3desktop@2x.jpg 2x
-                "
-              />
-              <source
-                media="(min-width: 768px)"
-                srcset="
-                  ../images/Blog/flowers_image3tablet@1x.jpg  1x,
-                  ../images/Blog/flowers_image3tabletp@2x.jpg 2x
-                "
-              />
-              <source
-                media="(max-width: 767px)"
-                srcset="
-                  ../images/Blog/flowers_image3mobile@1x.jpg  1x,
-                  ../images/Blog/flowers_image3mobilep@2x.jpg 2x
-                "
-              />
-              <img class="" src="../images/Blog/flowers_image3mobile@1x.jpg" alt="blue flower" />
-            </picture>
-          </li>
-        </ul>
+  <ul class="blog-list list">
+    <li class="blog-list-item">
+      <picture class="blog-list-item">
+        <source
+          media="(min-width: 1280px)"
+          srcset="
+            ./images/Blog/flowers_image1desktop@1x.jpg 1x,
+            ./images/Blog/flowers_image1desktop@2x.jpg 2x
+          "
+        />
+        <source
+          media="(min-width: 768px)"
+          srcset="
+            ./images/Blog/flowers_image1tablet@1x.jpg 1x,
+            ./images/Blog/flowers_image1tablet@2x.jpg 2x
+          "
+        />
+        <source
+          media="(max-width: 767px)"
+          srcset="
+            ./images/Blog/flowers_image1mobile@1x.jpg 1x,
+            ./images/Blog/flowers_image1mobile@2x.jpg 2x
+          "
+        />
+        <img class="" src="./images/Blog/flowers_image1mobile@1x.jpg" alt="green flower" />
+      </picture>
+    </li>
+    <li class="blog-list-item">
+      <picture>
+        <source
+          media="(min-width: 1280px)"
+          srcset="
+            ./images/Blog/flowers_image2desktop@1x.jpg 1x,
+            ./images/Blog/flowers_image2desktop@2x.jpg 2x
+          "
+        />
+        <source
+          media="(min-width: 768px)"
+          srcset="
+            ./images/Blog/flowers_image2tablet@1x.jpg 1x,
+            ./images/Blog/flowers_image2tablet@2x.jpg 2x
+          "
+        />
+        <source
+          media="(max-width: 767px)"
+          srcset="
+            ./images/Blog/flowers_image2mobile@1x.jpg 1x,
+            ./images/Blog/flowers_image2mobile@2x.jpg 2x
+          "
+        />
+        <img class="" src="./images/Blog/flowers_image2mobile@1x.jpg" alt="orange flower" />
+      </picture>
+    </li>
+    <li class="blog-picture-visually-hidden">
+      <picture>
+        <source
+          media="(min-width: 1280px)"
+          srcset="
+            ./images/Blog/flowers_image3desktop@1x.jpg 1x,
+            ./images/Blog/flowers_image3desktop@2x.jpg 2x
+          "
+        />
+        <source
+          media="(min-width: 768px)"
+          srcset="
+            ./images/Blog/flowers_image3tablet@1x.jpg 1x,
+            ./images/Blog/flowers_image3tablet@2x.jpg 2x
+          "
+        />
+        <source
+          media="(max-width: 767px)"
+          srcset="
+            ./images/Blog/flowers_image3mobile@1x.jpg 1x,
+            ./images/Blog/flowers_image3mobile@2x.jpg 2x
+          "
+        />
+        <img class="" src="./images/Blog/flowers_image3mobile@1x.jpg" alt="blue flower" />
+      </picture>
+    </li>
+  </ul>
 
-        <div class="blog-vector-container">
-          <div>
-            <svg class="blog-svg" width="50" height="50">
-              <use href="../images/Blog/icons.svg#icon-Vector-direction-left"></use>
-            </svg>
-          </div>
-          <div class="">
-            <svg class="blog-svg" width="50" height="50">
-              <use href="../images/Blog/icons.svg#icon-Vector-direction-right"></use>
-            </svg>
-          </div>
-        </div>
-        <div>
-          <div class="blog-newsletter-container">
-            <p class="blog-text">Follow to our newsletter</p>
-            <button
-              type="button"
-              class="blog-subscribe-btn blog-subscribe-btn-text"
-              data-modal-open
-            >
-              Subscribe
-            </button>
-          </div>
-        </div>
-      </section>
-    </main>
-    <footer></footer>
-    <div class="backdrop is-hidden blog-modal-text" data-modal>
-      <div class="modal">
-        <button class="close-btn" type="button" data-modal-close>
-          <svg class="icon-modal-close" width="18" height="18">
-            <use href="../images/Blog/icons.svg#mobile-menu-close"></use>
-          </svg>
-        </button>
-        <h2 class="blog-modal-heading">Contact us</h2>
-        <p class="blog-modal-text-p">
-          If you have any additional questions or you want to clarify something before you make an
-          order please fill in your contact details. We will call you back.
-        </p>
-        <form>
-          <div class="blog-modal-wrapper">
-            <label class="blog-modal-label" for="user-name">Name</label>
-            <div class="modal-icon-wrapper">
-              <input
-                class="blog-modal-input"
-                type="text"
-                name="user-name"
-                id="user-name"
-                placeholder="Your name"
-                required
-              />
-              <svg class="modal-icon" width="18" height="24">
-                <use href="../images/icons.svg#icon-person"></use>
-              </svg>
-            </div>
-          </div>
-          <div class="blog-modal-wrapper">
-            <label class="blog-modal-label" for="user-email">Email</label>
-            <div class="modal-icon-wrapper">
-              <input
-                class="blog-modal-input"
-                type="email"
-                name="user-email"
-                id="user-email"
-                placeholder="Your email"
-                required
-              />
-            </div>
-          </div>
-          <button class="modal-button-submit" type="submit">Send</button>
-        </form>
-      </div>
+  <div class="blog-vector-container">
+    <div>
+      <svg class="blog-svg" width="50" height="50">
+        <use href="./images/Blog/icons.svg#icon-Vector-direction-left"></use>
+      </svg>
     </div>
-    <script src="../js/modal.js"></script>
-  </body>
-</html>
+    <div class="">
+      <svg class="blog-svg" width="50" height="50">
+        <use href="./images/Blog/icons.svg#icon-Vector-direction-right"></use>
+      </svg>
+    </div>
+  </div>
+  <div>
+    <div class="blog-newsletter-container">
+      <p class="blog-text">Follow to our newsletter</p>
+      <button type="button" class="blog-subscribe-btn blog-subscribe-btn-text" data-modal-open>
+        Subscribe
+      </button>
+    </div>
+  </div>
+</section>
