--- a/src/partials/delivery.html
+++ b/src/partials/delivery.html
@@ -27,8 +27,7 @@
       <p class="delivery-item-p">Make someone happy or enjoy yourself</p>
     </li>
   </ul>
-</section>
-<!-- Delivery-background -->
-<section>
   <div class="delivery-background"></div>
 </section>
+<!-- Delivery-background -->
+<section></section>
