--- a/src/css/delivery.css
+++ b/src/css/delivery.css
@@ -44,7 +44,8 @@ body {
     width: 320px;
     display: flex;
     flex-direction: column;
-    margin: 60px 16px 0 16px;
+    
+    margin: 60px auto 0 auto;
 
     color: #000;
     font-family: Montserrat;
@@ -124,7 +125,7 @@ body {
 @media screen and (min-width: 768px) {
 .delivery-container {
         min-width: 768px;
-        margin: 100px 24px 100px 24px;
+        margin: 100px auto 100px auto;
     }
 
 .delivery-section-title-container {
