--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,4 @@
-
+/* 
 
 * {
     padding: 0;
@@ -14,4 +14,4 @@ body {
   }
 
   @import url(./partials/about.scss);
-  @import url("../styles/partials/_blog.scss");
+  @import url("../styles/partials/_blog.scss"); */
