--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,2 +1,5 @@
 @import url(./blog.css);
 @import url(./delivery.css);
+@import url(./footer.css);
+@import url(./header.css);
+@import url(./store.css);
