--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,6 @@
 
 
-/* 
+/*
 
 * {
     padding: 0;
@@ -19,7 +19,7 @@ body {
 
 
   @import url(./partials/footer.scss);
-
+  @import url(./partials/hero.scss)
   @import url(./partials/about.scss);
   @import url("../styles/partials/_blog.scss");
   @import url(./partials/footer.scss);
