--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,3 +3,5 @@
 @import url(./footer.css);
 @import url(./header.css);
 @import url(./store.css);
+@import url(./hero.css);
+@import url(./about.css);
