--- a/src/partials/store.html
+++ b/src/partials/store.html
@@ -39,7 +39,7 @@
                 </li>
             </ul>
             <div class="btn-wrapper">
-            <button class="btn-store" type="button">Order flowers</button>
+            <button class="btn-store" data-modal-open2 type="button">Order flowers</button>
             </div>
         </div>
     </section>
