--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,8 +1,8 @@
         <div class="footer-div container">
         <div class="logo">
-            <a href="/index.html">
+            <a href="./index.html">
                 <svg width="57" height="73">
-                    <use href="..src/images/logo.svg#logo"></use>
+                    <use href="./images/logo.svg#logo"></use>
                 </svg>
             </a>
         </div>
@@ -46,14 +46,14 @@
                 <li class="media-li">
                     <a href="/">
                         <svg class="media-svg" width="28" height="28">
-                            <use href="..src/images/media.svg#fb"></use>
+                            <use href="./images/media.svg#fb"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="media-li">
                     <a href="/">
                         <svg class="media-svg" width="28" height="28">
-                            <use href="..src/images/media.svg#ins"></use>
+                            <use href="./images/media.svg#ins"></use>
                         </svg>
                     </a>
                 </li>
