--- a/src/css/about.css
+++ b/src/css/about.css
@@ -11,16 +11,22 @@ body {
     font-family: "Montsterrat", sans-serif;
     color: black;
   }
-.container {
-  max-width: 288px;
-  margin: 24px;
-}
-.about {
-  height: 395px;
-}
-.about-div {
-  padding-top: 61px;
-}
+
+  .container {
+    width: 100%;
+    max-width: 480px;
+    padding: 0 16px;
+    margin: 0 auto;
+  }
+
+  .section {
+    padding-bottom: 100px;
+  }
+
+/* .about-div {
+  
+} */
+
 .section-title {
   font-weight: 700;
   font-size: 24px;
@@ -28,17 +34,8 @@ body {
   letter-spacing: 0.05em;
   text-align: left;
   text-transform: uppercase;
-  position: relative;
 }
-.section-title::after {
-  content: '';
-  width: 100%;
-  height: 1px;
-  left: 105px;
-  top: 14px;
-  position: absolute;
-  background-color: black;
-}
+
 .text {
   font-weight: 400;
   font-size: 16px;
@@ -50,7 +47,7 @@ body {
 /*tablet*/
 @media (min-width: 768px) {
 .container {
-  max-width: 720px;
+  max-width: 768px;
 }
 .about-div {
   display: flex;
@@ -61,20 +58,14 @@ body {
   width: 320px;
   font-size: 20px;
 }
-img {
-  width: 344px;
-  height: 217px;
 }
-}
+
 /*desktop*/
-@media (min-width: 1280px) {
+@media (min-width: 1200px) {
   .container {
-    max-width: 1050px;
+    max-width: 1200px;
   }
-  img {
-    width: 632px;
-    height: 344px;
-  }
+
   .text {
     font-size: 22px;
     width:  510px;
