--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="section">
   <div class="container">
     <h2 class="section-title" id="about">ABOUT</h2>
     <div class="about-div">
@@ -7,13 +7,13 @@
         people the beauty and joy creating stylish and modern masterpieces. Every bouquet we create
         is unique as you are.
       </p>
-      <!-- <img
+      <img
         src="./images/about.jpg"
         srcset="./images/about@2x.jpg 2x"
         alt="pink flowers"
         width="288"
         height="178"
-      /> -->
+      />
     </div>
   </div>
 </section>
