--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -8,8 +8,8 @@
         is unique as you are.
       </p>
       <img
-        src="./images/about.jpg"
-        srcset="./images/about@2x.jpg 2x"
+        src="./images/image_about.jpg"
+        srcset="./images/image_about@2x.jpg 2x"
         alt="pink flowers"
         width="288"
         height="178"
