--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,6 +1,9 @@
 <section class="section">
   <div class="container">
-    <h2 class="section-title" id="about">ABOUT</h2>
+    <div class="title-line-wrapper">
+      <h2 class="section-title" id="about">ABOUT</h2>
+      <div class="line"></div>
+    </div>
     <div class="about-div">
       <p class="text">
         We are a minimalistic flower studio. We love people and flowers. Therfore, every day we give
