--- a/src/partials/delivery.html
+++ b/src/partials/delivery.html
@@ -1,5 +1,5 @@
 <!-- Delivery -->
-<section class="delivery-container">
+<section class="delivery-container container">
   <div class="delivery-section-title-container">
     <h2 class="delivery-section-title">DELIVERY</h2>
     <div class="delivery-line"></div>
