--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -1,42 +1,7 @@
-* {
-    padding: 0;
-    margin: 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ul {
-    margin: 0;
-    padding: 0;
-}
-
-img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
-
 button {
     cursor: pointer;
-    border: none;
     border-radius: 4px;
-}
-
-ul,
-ol {
-    list-style: none;
-    margin: 0;
-    padding-left: 0;
-}
-
-body {
-    font-family: "Montsterrat", sans-serif;
-
+    border: none;
 }
 
 /* Blog */
@@ -60,7 +25,7 @@ body {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    padding-right: 14px;
+    margin-bottom: 32px;
 }
 
 .blog-line {
