--- a/src/css/delivery.css
+++ b/src/css/delivery.css
@@ -5,13 +5,18 @@ button {
 }
 
 /* Delivery */
+
+.container {
+    width: 100%;
+    max-width: 480px;
+    padding: 0 16px;
+    margin: 0 auto;
+      }
+
 .delivery-container {
     width: 320px;
     display: flex;
     flex-direction: column;
-    
-    margin: 60px auto 0 auto;
-
     color: #000;
     font-family: Montserrat;
     font-size: 24px;
@@ -43,7 +48,6 @@ button {
     display: flex;
     flex-direction: column;
     gap: 14px;
-    margin-right: 16px;
 }
 .delivery-item {
     display: flex;
@@ -74,7 +78,7 @@ button {
 .delivery-background {
     margin-top: 26px;
     margin-bottom: 60px;
-    width: 320px;
+    width: 100%;
     height: 135px;
     background: url('../images/Delivery/backgroundDelivery-mobile@1x.jpg'), lightgray 0px -66.709px / 123.197% 177.547% no-repeat;
 }
