--- a/src/styles/partials/header.css/header.css
+++ b/src/styles/partials/header.css/header.css
@@ -63,6 +63,7 @@
 
     .header-div{
         height: 57px;
+        max-width:768px;
     }
 
     .header-logo{
@@ -115,6 +116,7 @@
 
     .header-div{
         height: 57px;
+        max-width: 1200px;
     }
 
     .header-logo{
