--- a/src/styles/partials/footer.css
+++ b/src/styles/partials/footer.css
@@ -1,5 +1,7 @@
-/*  FOOTER  */
-
+footer{
+    width: 100%;
+    background-color: #000;
+}
 .footer-div{
     position: relative;
     width: 100%;
@@ -100,12 +102,22 @@
     display: none;
 }
 
+.footer-icon-social-media{
+    width: 28px;
+    height: 28px;
+    flex-shrink: 0;
+}
+
 @media screen and (min-width:768px) and (max-width:1280px) {
-	.footer-div{
+
+    .footer-div{
         flex-direction: row;
         justify-content: space-between;
         padding-top: 60px;
+        margin-left: auto;
+        margin-right: auto;
         height: 208px;
+        max-width:768px
     }
 
     .footer-Opening_times{
@@ -145,15 +157,17 @@
     .footer-icon-logo{
         display: none;
     }
+    
 }
 
 @media screen and (min-width:1280px) {
-	.footer-div{
+    .footer-div{
         flex-direction: row;
         justify-content: space-between;
         gap: 96px;
         padding-top: 72px;
         height: 217px;
+        max-width:1200px;
     }
 
     .footer-logo{
