--- a/src/partials/blog.html
+++ b/src/partials/blog.html
@@ -1,4 +1,4 @@
-<section class="blog-container">
+<section class="blog-container container">
   <div class="blog-section-title-container">
     <h2 class="blog-section-title">BLOG</h2>
     <div class="blog-line"></div>
