--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,6 @@
 
 
-/*
+
 
 * {
     padding: 0;
@@ -23,4 +23,5 @@ body {
   @import url(./partials/about.scss);
   @import url("../styles/partials/_blog.scss");
   @import url(./partials/footer.scss);
-  @import url("../styles/partials/_blog.scss"); */
+  @import url("../styles/partials/_blog.scss");
+  @import url(./partials/modal-menu-phone.css);
