--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,4 +13,4 @@ body {
     font-family: "Montsterrat", sans-serif;
   }
 
-  @import url(./partials/new-footer.scss);
+  @import url(./partials/footer.scss);
