--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,39 +1,22 @@
- <section class="hero">
-        <div class="container hero-container">
-            <div class="hero-div">
-                <p class="subtitle">flower <br> studio</p>
-                <picture class="hero-img">
-                    <source
-                    media="max-width=267px"
-                    src="../images/hero-mobile.jpg"
-                    srcset=""
-                    alt=""
-                    width="145"
-                    height="274"
-                    />
-                    <source 
-                    media="min-width=268px"
-                    src="../images/hero-tablet.jpg"
-                    srcset=""
-                    alt=""
-                    width="390"
-                    height="636"
-                    />
-                    <source
-                    media="min-width=1280px"
-                    src="../images/hero-desktop.jpg"
-                    srcset=""
-                    alt=""
-                    width="542"
-                    height="636"
-                    />
-                </picture>
-                <button type="button" class="form-btn">
-                    <svg class="form-svg" width="64" height="76">
-                        <use href="../images/hero-btn.svg#icon-btn"></use>
-                    </svg>
-                </button>
-            </div>
-            <h1 class="title" id="anemone">Anemone</h1>
+<section class="hero">
+    <div class="container hero-container">
+        <div class="hero-div">
+            <p class="subtitle">flower <br> studio</p>
+            <picture class="hero-img">
+              <source 
+              srcset="./images/hero/hero-desktop.jpg" media="(min-width: 1280px)"
+              />
+              <source
+              srcset="./images/hero/hero-tablet.jpg" media="(min-width: 786px)"
+              />
+              <img src="./images/hero/hero-mobile.jpg">
+            </picture>
+            <button type="button" class="form-btn">
+                <svg class="form-svg" width="64" height="76">
+                    <use href="./images/hero-btn.svg#icon-btn"></use>
+                </svg>
+            </button>
         </div>
-    </section>
+        <h1 class="title" id="anemone">Anemone</h1>
+    </div>
+  </section>
