--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,62 +1,40 @@
-        <div class="footer-div container">
-        <div class="logo">
-            <a href="./index.html">
-                <svg width="57" height="73">
-                    <use href="./images/logo.svg#logo"></use>
+<div class="footer-div">
+    <div class="footer-logo">
+        <svg class="header-icon-logo">
+            <use href="./images/icon.svg#icon-Logo-1"></use>
+        </svg>
+        <div class="footer-Navigation">
+            <p class="footer-main-text">Navigation</p>
+            <ul class="footer-list">
+                <li><a class="footer-text" href="">Anemone</a></li>
+                <li><a class="footer-text" href="">About us</a></li>
+                <li><a class="footer-text" href="">Store</a></li>
+                <li><a class="footer-text" href="">Delivery</a></li>
+            </ul>
+        </div>
+        <div class="footer-Opening_times">
+            <p class="footer-main-text">Opening times</p>
+            <div class="footer-wrap-text"><P class="footer-text">Every day 9:00 - 22:00</P>
+        </div>
+        <div class="footer-Contacts">
+                <p class="footer-main-text">Contacts</p>
+                    <address>
+                        <ul class="footer-list">
+                            <li><a class="footer-text" href="">+38 063 123 45 67</a></li>
+                            <li><div class="footer-wrap-text-two"><a class="footer-text" href="">anemonestudio@example.com</a></div></li>
+                            <li><div class="footer-wrap-tree"><p class="footer-text" >Reitarska Street, 11 Kyiv, Ukraine</p></div></li>
+                        </ul>
+                    </address>
+        </div>
+        <div class="footer-icons">
+            <a href="">
+                <svg class="footer-icon-social-media">
+                    <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
             </a>
-        </div>
-        <div class="navigation">
-            <h3 class="footer-title">Navigation</h3>
-            <ul class="navigation-list">
-                <li class="navigation-li">
-                    <a class="navigation-link text-footer" href="#anemone">Anemone</a>
-                </li>
-                <li class="navigation-li">
-                    <a class="navigation-link text-footer" href="#about">About us</a>
-                </li>
-                <li class="navigation-li">
-                    <a class="navigation-link text-footer" href="#store">Store</a>
-                </li>
-                <li class="navigation-li">
-                    <a class="navigation-link text-footer" href="#delivery">Delivery</a>
-                </li>
-            </ul>
-        </div>
-        <div class="opening">
-            <h3 class="footer-title">Opening times</h3>
-            <p class="text-footer">Every day <br> 9:00 - 22:00</p>
-        </div>
-        <div class="contacts">
-            <h3 class="footer-title">Contacts</h3>
-            <ul class="contacts-list">
-                <li class="contacts-li">
-                    <a class="contacts-link text-footer" href="tel:+380631234567">+38 063 123 45 67</a>
-                </li>
-                <li class="contacts-li">
-                    <a class="contacts-link text-footer" href="mailto:anemonestudio@example.com">anemonestudio@example.com</a>
-                </li>
-                <li class="contacts-li">
-                    <p class="text-footer">Reitarska Street, 11 Kyiv, Ukraine</p>
-                </li>
-            </ul>
-        </div>
-        <div class="social-media">
-            <ul class="media-list">
-                <li class="media-li">
-                    <a href="/">
-                        <svg class="media-svg" width="28" height="28">
-                            <use href="./images/media.svg#fb"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="media-li">
-                    <a href="/">
-                        <svg class="media-svg" width="28" height="28">
-                            <use href="./images/media.svg#ins"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
-        </div>
+            <a href="">
+                <svg class="footer-icon-social-media">
+                    <use href="./images/icon.svg#icon-instagram"></use>
+                </svg>
+            </a>
         </div>
