--- a/src/css/store.css
+++ b/src/css/store.css
@@ -89,10 +89,7 @@
 
 @media (min-width: 768px) {
   .container {
-    width: 100%;
-    max-width: 1200px;
-    padding: 0 16px;
-    margin: 0 auto;
+    max-width: 768px;
   }
   
   .section-title {
@@ -121,6 +118,10 @@
 }
 
 @media (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
+  
   .store-list-item img {
     width: 600px;
     height: 542px;
