--- a/src/css/about.css
+++ b/src/css/about.css
@@ -44,6 +44,7 @@
   font-size: 16px;
   line-height: 1.2;
   letter-spacing: 0.04em;
+  width: 100%;
 }
   
 /*tablet*/
@@ -58,7 +59,7 @@
 }
 
 .text {
-  width: 320px;
+  width: 322px;
   font-size: 20px;
 }
 }
