--- a/src/css/delivery.css
+++ b/src/css/delivery.css
@@ -92,6 +92,11 @@ button {
 }
 
 @media screen and (min-width: 768px) {
+    .container {
+        max-width: 768px;
+          }
+
+
 .delivery-container {
         min-width: 768px;
         margin: 100px auto 100px auto;
@@ -140,9 +145,11 @@ button {
     
 }
 @media screen and (min-width: 1280px) {
-.delivery-container {
-        min-width: 1280px;
-    }
+    
+.container {
+        max-width: 768px;
+          }
+
 
 .delivery-section-title-container {
     gap: 16px;
