--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,5 +1,3 @@
-
-
 .hero-div {
     display: flex;
     align-items: center;
@@ -9,6 +7,8 @@
   position: relative;
   height: 350px;
   margin-top: 24px;
+  max-width: 480px;
+  margin: 0 auto;
 }
 .title {
   font-family: "Montserrat", sans serif;
@@ -29,7 +29,7 @@
 
 @media (min-width: 768px) {
 .hero-container {
-    margin-top: 50px;
+    max-width: 720px;
     height: 780px;
 }
 .title {
@@ -46,6 +46,9 @@
 }
 
 @media (min-width: 1280px) {
+.hero-container {
+  max-width: 1050px
+}
 .title {
     font-size: 160px;
     margin-top: 300px;
