--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
 <section class="hero">
-    <div class="container hero-container">
+    <div class="hero-container">
         <div class="hero-div">
             <p class="subtitle">flower <br> studio</p>
             <picture class="hero-img">
