--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,5 +1,5 @@
 <section class="section">
-  <div class="container">
+  <div class="about-container">
     <div class="title-line-wrapper">
       <h2 class="section-title" id="about">ABOUT</h2>
       <div class="line"></div>
@@ -10,7 +10,7 @@
         people the beauty and joy creating stylish and modern masterpieces. Every bouquet we create
         is unique as you are.
       </p>
-      <img
+      <img class="about-img"
         src="./images/about.jpg"
         srcset="./images/about@2x.jpg 2x"
         alt="pink flowers"
