--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,19 +1,15 @@
-
-  .container {
-    width: 100%;
-    max-width: 480px;
-    padding: 0 16px;
-    margin: 0 auto;
-  }
-
   .section {
     padding-bottom: 100px;
   }
-
+.about-container {
+   max-width: 480px;
+  margin: 0 auto;
+}
 .about-div {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  align-items: center;
 }
 
 .title-line-wrapper {
@@ -49,7 +45,7 @@
   
 /*tablet*/
 @media (min-width: 768px) {
-.container {
+.about-container {
   max-width: 768px;
 }
 
@@ -62,16 +58,24 @@
   width: 322px;
   font-size: 20px;
 }
+.about-img {
+  width: 344px;
+  height: 217px;
+}
 }
 
 /*desktop*/
 @media (min-width: 1200px) {
-  .container {
+  .about-container {
     max-width: 1200px;
   }
 
   .text {
     font-size: 22px;
     width:  510px;
+  }
+  .about-img {
+    width: 632px;
+    height: 344px;
   }
 }
