--- a/src/css/about.css
+++ b/src/css/about.css
@@ -4,12 +4,14 @@
 .about-container {
    max-width: 480px;
   margin: 0 auto;
+  padding: 0 16px;
 }
 .about-div {
   display: flex;
   flex-direction: column;
   gap: 16px;
   align-items: center;
+  justify-content: space-between;
 }
 
 .title-line-wrapper {
@@ -40,8 +42,7 @@
   font-size: 16px;
   line-height: 1.2;
   letter-spacing: 0.04em;
-  width: 100%;
-  max-width: 288px;
+  width: 288px;
 }
   
 /*tablet*/
@@ -73,7 +74,7 @@
 
   .text {
     font-size: 22px;
-    width:  510px;
+    width: 510px;
   }
   .about-img {
     width: 632px;
