--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -9,6 +9,7 @@
   margin-top: 24px;
   max-width: 480px;
   margin: 0 auto;
+  padding: 0 16px;
 }
 .title {
   font-family: "Montserrat", sans serif;
