--- a/src/partials/modal.menu.html
+++ b/src/partials/modal.menu.html
@@ -1,7 +1,7 @@
 <div class="menu-container js-menu-container" id="mobile-menu">
     <button class="menu-toggle close-btn js-close-menu">
         <svg class="modal-icon-close">
-          <!----  <use href="./icons/icons.svg#icon-x"></use> -->
+            <use href="./icons/icons.svg#icon-x"></use> 
         </svg>
       </svg>
     </button>
