--- a/src/styles/partials/delivery1.scss
+++ b/src/styles/partials/delivery1.scss
@@ -172,6 +172,7 @@ body {
 @media screen and (min-width: 1280px) {
 .delivery-container {
         min-width: 1280px;
+        margin: 100px 24px 100px 24px;
     }
 
 .delivery-section-title-container {
