--- a/src/css/delivery.css
+++ b/src/css/delivery.css
@@ -91,11 +91,6 @@ button {
 }
 
 @media screen and (min-width: 768px) {
-    .container {
-        max-width: 768px;
-    }
-
-
     .delivery-container {
         min-width: 768px;
         margin: 100px auto 100px auto;
@@ -148,11 +143,10 @@ button {
 }
 
 @media screen and (min-width: 1280px) {
-
-    .container {
-        max-width: 768px;
+    .delivery-container {
+        min-width: 1280px;
+        margin: 100px auto 100px auto;
     }
-
 
     .delivery-section-title-container {
         gap: 16px;
