--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -166,7 +166,7 @@ footer{
         gap: 96px;
         padding-top: 72px;
         height: 298px;
-        width:1200px;
+        max-width:1200px;
     }
 
     .footer-logo{
