--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -109,7 +109,7 @@ footer{
 }
 
 
-@media screen and (min-width:768px) and (max-width:1280px) {
+@media screen and (min-width:768px) and (max-width:1200px) {
 	.footer-div{
         flex-direction: row;
         justify-content: space-between;
@@ -159,7 +159,7 @@ footer{
     }
 }
 
-@media screen and (min-width:1280px) {
+@media screen and (min-width:1200px) {
 	.footer-div{
         flex-direction: row;
         justify-content: space-between;
@@ -167,6 +167,8 @@ footer{
         padding-top: 72px;
         height: 298px;
         max-width:1200px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .footer-logo{
