--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,10 +7,10 @@
     <div class="footer-Navigation">
             <p class="footer-main-text">Navigation</p>
             <ul class="footer-list">
-            <li><a class="footer-text" href="">Anemone</a></li>
-            <li><a class="footer-text" href="">About us</a></li>
-            <li><a class="footer-text" href="">Store</a></li>
-            <li><a class="footer-text" href="">Delivery</a></li>
+            <li><a class="footer-text" href="#aneomone">Anemone</a></li>
+            <li><a class="footer-text" href="#about">About us</a></li>
+            <li><a class="footer-text" href="#store">Store</a></li>
+            <li><a class="footer-text" href="#delivery">Delivery</a></li>
         </ul>
     </div>
     <div class="footer-Opening_times">
