--- a/src/partials/delivery.html
+++ b/src/partials/delivery.html
@@ -1,7 +1,7 @@
 <!-- Delivery -->
 <section class="delivery-container container">
   <div class="delivery-section-title-container">
-    <h2 class="delivery-section-title">DELIVERY</h2>
+    <h2 class="delivery-section-title" id="delivery">DELIVERY</h2>
     <div class="delivery-line"></div>
   </div>
 
