--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,6 +4,7 @@
     margin-left: auto;
     margin-right: auto;
     width: 100%;
+    max-width: 480px;
     height: 35px;
     position: relative;
 }
