--- a/src/partials/blog-modal.html
+++ b/src/partials/blog-modal.html
@@ -10,7 +10,7 @@
       If you have any additional questions or you want to clarify something before you make an order
       please fill in your contact details. We will call you back.
     </p>
-    <form>
+    <form id="modal">
       <div class="blog-modal-wrapper">
         <label class="blog-modal-label" for="user-name">Name</label>
         <div class="">
