Dodanie zdjęć sklepowych dla wszystkich wyświetlaczy

--- a/src/partials/store.html
+++ b/src/partials/store.html
@@ -8,8 +8,10 @@
                 <li class="store-list-item">
                     <picture>
                         <source media="(max-width: 767px)" srcset="./images/bouquet1mobile.jpg 1x, ./images/bouquet1mobile@2x.jpg 2x">
+                        <source media="(min-width: 768px)" srcset="./images/bouquet1tablet.jpg 1x, ./images/bouquet1tablet@2x.jpg 2x">
+                        <source media="(min-width: 1280px)" srcset="./images/bouqet1desktop.jpg 1x, ./images/bouquet1desktop@2x.jpg 2x">
                     </picture>
-                    <!-- <img src="./images/bouquet1.jpg" width="136" height="155" srcset="./images/bouquet1@2x.jpg 2x"> -->
+                    <img src="./images/bouquet1mobile.jpg" alt="Photo of flower bouqet"> 
                     <div class="store-wrapper">
                         <h3 class="store-item-header">compliments</h3>
                         <div class="store-line"></div>
@@ -17,7 +19,12 @@
                     <p class="store-item-text">from $15</p>
                 </li>
                 <li class="store-list-item">
-                    <img src="./images/bouquet2.jpg" width="136" height="155" srcset="./images/bouquet2@2x.jpg 2x">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="./images/bouquet2mobile.jpg 1x, ./images/bouquet2mobile@2x.jpg 2x">
+                        <source media="(min-width: 768px)" srcset="./images/bouquet2tablet.jpg 1x, ./images/bouquet2tablet@2x.jpg 2x">
+                        <source media="(min-width: 1280px)" srcset="./images/bouqet2desktop.jpg 1x, ./images/bouquet2desktop@2x.jpg 2x">
+                    </picture>
+                    <img src="./images/bouquet2mobile.jpg" alt="Photo of flower bouqet"> 
                     <div class="store-wrapper">
                         <h3 class="store-item-header">bouquets size S</h3>
                         <div class="store-line"></div>
@@ -25,7 +32,12 @@
                     <p class="store-item-text">from $25</p>
                 </li>
                 <li class="store-list-item">
-                    <img src="./images/bouquet3.jpg" width="136" height="155" srcset="./images/bouquet3@2x.jpg 2x">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="./images/bouquet3mobile.jpg 1x, ./images/bouquet3mobile@2x.jpg 2x">
+                        <source media="(min-width: 768px)" srcset="./images/bouquet3tablet.jpg 1x, ./images/bouquet3tablet@2x.jpg 2x">
+                        <source media="(min-width: 1280px)" srcset="./images/bouqet3desktop.jpg 1x, ./images/bouquet3desktop@2x.jpg 2x">
+                    </picture>
+                    <img src="./images/bouquet3mobile.jpg" alt="Photo of flower bouqet"> 
                     <div class="store-wrapper">
                         <h3 class="store-item-header">bouquets size M</h3>
                         <div class="store-line"></div>
@@ -33,7 +45,12 @@
                     <p class="store-item-text">from $45</p>
                 </li>
                 <li class="store-list-item">
-                    <img src="./images/bouquet4.jpg" width="136" height="155" srcset="./images/bouquet4@2x.jpg 2x">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="./images/bouquet4mobile.jpg 1x, ./images/bouquet4mobile@2x.jpg 2x">
+                        <source media="(min-width: 768px)" srcset="./images/bouquet4tablet.jpg 1x, ./images/bouquet4tablet@2x.jpg 2x">
+                        <source media="(min-width: 1280px)" srcset="./images/bouqet4desktop.jpg 1x, ./images/bouquet4desktop@2x.jpg 2x">
+                    </picture>
+                    <img src="./images/bouquet4mobile.jpg" alt="Photo of flower bouqet"> 
                     <div class="store-wrapper">
                         <h3 class="store-item-header">bouqets size L</h3>
                         <div class="store-line"></div>
