--- a/src/partials/store.html
+++ b/src/partials/store.html
@@ -6,10 +6,7 @@
             </div>
             <ul class="store-list">
                 <li class="store-list-item">
-                    <picture>
-                        <source media="(max-width: 767px)" srcset="./images/bouquet1mobile.jpg 1x, ./images/bouquet1mobile@2x.jpg 2x">
-                    </picture>
-                    <img src="./images/bouquet1.jpg"> 
+                    <img src="./images/bouquet1.jpg" width="136" height="155" srcset="./images/bouquet1@2x.jpg 2x"> 
                     <div class="store-wrapper">
                         <h3 class="store-item-header">compliments</h3>
                         <div class="store-line"></div>
